--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechSolutions IT Services</title>
+    <title>Statvion Infotech Solutions</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
         header { background-color: #333; color: white; padding: 1rem; text-align: center; }
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <h1>TechSolutions IT Services</h1>
+        <h1>Statvion Infotech Solution</h1>
         <p>Your Trusted Partner in Technology</p>
     </header>
     <nav>
